# ROS-Academy-for-Beginners

./: README.md
face_recognize/: face_recognize.py  face_train.py
myrobot_description/: package.xml
myrobot_description/config/: fake_myrobot_arbotix.yaml
myrobot_description/launch/: arbotix_myrobot_with_kinect.launch  display-myrobot_move_urdf.launch  display_myrobot_urdf.launch  display_myrobot_with_camera_xacro.launch  display_myrobot_with_kinect_xacro.launch  display_myrobot_with_rplidar_xacro.launch  display_myrobot_xacro.launch
myrobot_description/urdf/: camera.xacro  kinect.xacro  myrobot.gv  myrobot.urdf  myrobot1.urdf  myrobot_body.xacro  myrobot_move.urdf  myrobot_with_camera.xacro  myrobot_with_kinect.xacro  myrobot_with_rplidar.xacro
myrobot_gazebo/: CMakeLists.txt  package.xml
myrobot_gazebo/config/: diffdrive.yaml
myrobot_gazebo/launch/: gripper.launch  head.launch  joints.launch  view_myrobot_gazebo.launch  view_myrobot_move_diffdriver_gazebo.launch  view_myrobot_move_gazebo.launch  view_myrobot_with_camera_gazebo.launch
myrobot_gazebo/urdf/: camera.xacro  head-firsttransmission.urdf.xacro  myrobot.urdf.xacro  myrobot_move_diffdriver.urdf.xacro  myrobot_move_with_camera.urdf.xacro
myrobot_teleop/: CMakeLists.txt  package.xml
myrobot_teleop/launch/: myrobot_teleop.launch
myrobot_teleop/scripts/: myrobot_teleop.py
robot_perception/Linux_iat1227_b1d6e287/samples/iat_online_record_sample/: iat_online_record_sample.c
robot_perception/Linux_iat1227_b1d6e287/samples/iat_online_sample/: iat_online_sample.c
(+9 files in other folders)
