<?xml version="1.0"?>
<package>
  <name>myrobot_gazebo</name>
  <version>0.0.1</version>
  <description>The myrobot_gazebo package</description>
  
  <author email="jiangcj@cqupt.edu.cn">jiangcj</author>

  <maintainer email="jiangcj@cqupt.edu.cn">jiangcj</maintainer>

  <license>BSD</license>
  <!-- Based on urdf_sim_tutorial -->

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>diff_drive_controller</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>position_controllers</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rqt_robot_steering</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>

</package>
